renaming the remaining projects

--- a/MetersWebApp/Views/Landis/Create.cshtml
+++ b/MetersWebApp/Views/Landis/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LandisWebApp.Models.Meter
+﻿@model MetersWebApp.Models.Meter
 
 @{
     ViewData["Title"] = "Create new meter";
@@ -33,6 +33,6 @@
 </div>
 
 <div>
-    <a asp-controller="Landis" asp-action="Index">Back to List</a>
+    <a asp-controller="Meters" asp-action="Index">Back to List</a>
 </div>
 
