--- a/MetersWebApp/Views/Shared/_Meter.cshtml
+++ b/MetersWebApp/Views/Shared/_Meter.cshtml
@@ -1,4 +1,4 @@
-﻿@model LandisWebApp.Models.Meter
+﻿@model MetersWebApp.Models.Meter
 
 <div class="meter">
     <h1>Meter @Model.Id</h1>
@@ -17,5 +17,5 @@
     <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
 </div>
 <div>
-    <a asp-controller="Landis" asp-action="Index">Back to List</a>
+    <a asp-controller="Meters" asp-action="Index">Back to List</a>
 </div>
