--- a/MetersSimulatorApp/App.xaml
+++ b/MetersSimulatorApp/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="LandisSimulatorApp.App"
+﻿<Application x:Class="MetersSimulatorApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LandisSimulatorApp"
+             xmlns:local="clr-namespace:MetersSimulatorApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
