--- a/MetersWebApp/Views/_ViewImports.cshtml
+++ b/MetersWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using LandisWebApp
-@using LandisWebApp.Models
+﻿@using MetersWebApp
+@using MetersWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
